--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap&subset=cyrillic');
-
 * {
     margin: 0;
     padding: 0;
@@ -46,7 +45,6 @@ body {
 }
 
 .menu-link {
-    font-family: Montserrat;
     font-size: 14px;
     font-weight: 300;
     line-height: 48px;
@@ -153,4 +151,58 @@ body {
 
 .circle:hover {
     background-color: #212121;
+}
+
+.content {
+    width: 1366px;
+}
+
+.content .menu-cont {}
+
+.content .menu-cont-list {
+    float: left;
+    margin-left: 98px;
+    border-bottom: 1px solid #6c6c6c;
+    padding-bottom: 3px
+}
+
+.content .menunewfcontent {
+    list-style-type: none;
+    display: inline-block;
+    margin-top: 120px;
+    
+    
+    
+}
+
+.content .menu-link-fea {
+    font-size: 36px;
+    font-weight: bold;
+    text-align: left;
+    color: #212121;
+    text-decoration: none;
+}
+
+.content .menu-link-new {
+    font-size: 36px;
+    font-weight: bold;
+    text-align: left;
+    color: #6c6c6c;
+    text-decoration: none;
+    padding-left: 25px;
+}
+
+.content .explore-all {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    letter-spacing: 3.6px;
+    text-align: center;
+    color: #212121;
+    float: right;
+    text-decoration: none;
+    margin-top: 137px;
+    margin-right: 98px;
+    text-transform: uppercase;
+    
 }
