--- a/css/style.css
+++ b/css/style.css
@@ -254,5 +254,60 @@ body {
 
 .link-tovar img:hover {
     z-index: 0;
-    transition-duration: .2s
+    transition-duration: 1s;
+    transition-delay: .2s;
 }
+
+.promo {
+    display: inline-block;
+    margin-top: 450px
+}
+
+.promo .promo-left {
+    width: 683px;
+    height: 683px;
+    float: left;
+    background-image: url(/img/promo-img1.jpg)
+}
+
+.promo .promo-right {
+    width: 683px;
+    height: 683px;
+    float: left;
+    background-image: url(/img/promo-img.jpg)
+}
+
+.promo-text {
+    margin-top: 228px;
+}
+
+.promo-text .promo-exclusive {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 48px;
+    letter-spacing: 1.8px;
+    text-align: left;
+    color: #1e88e5;
+    text-transform: uppercase;
+}
+
+.promo-text .promo-h2 {
+    font-size: 36px;
+    font-weight: bold;
+    text-align: left;
+    color: #212121;
+    padding-bottom: 10px;
+    text-transform: uppercase
+}
+
+.promo-text .promo-content {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+    text-align: left;
+    color: #6c6c6c;
+    width: 450px;
+    padding-bottom: 20px
+}
+
+.promo-text .promo-content.promo-text .button {}
