--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 body {
@@ -486,7 +487,7 @@ body {
 
 .slider-text4 {
     background-image: url(../img/back-img.jpg);
-    height: 450px;
+    height: 400px;
     margin-top: 200px;
     position: relative;
 }
@@ -541,7 +542,7 @@ body {
 .footerblock {
     margin-top: 120px;
     position: relative;
-    display: inline-block;
+    padding-left: 98px;
 }
 
 .copyr {
@@ -550,13 +551,13 @@ body {
 }
 
 .socialimg {
-    width: 1366px;
+    width: 100%;
     float: left;
     text-align: center;
 }
 
 .terms {
-    width: 1366px;
+    width: 92%;
     float: left;
     position: absolute;
     text-align: right;
@@ -569,3 +570,179 @@ body {
 .soc {
     height: 100%;
 }
+
+.footermenu {
+    width: 100%;
+}
+
+.h-footer-menu {
+    margin-bottom: 25px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.33;
+    letter-spacing: 1.8px;
+    text-align: left;
+    color: rgb(108, 108, 108);
+
+}
+
+.footermenu .left-col {
+    width: 21%;
+    float: left;
+    display: inline-block;
+}
+
+.footermenu .left-col p:first-child {
+    text-transform: uppercase;
+}
+
+.footer-p-left1 {
+    font-size: 14px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.57;
+    letter-spacing: normal;
+    text-align: left;
+    color: rgb(33, 33, 33);
+    margin-bottom: 25px;
+}
+
+
+}
+
+.footer-p-left2 {
+    font-size: 14px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.57;
+    letter-spacing: normal;
+    text-align: left;
+    color: rgb(33, 33, 33);
+}
+
+
+.footermenu .center-col {
+    width: 27%;
+
+    display: inline-block;
+    padding-left: 5%;
+
+}
+
+.footermenu .center-col p:first-child {
+    text-transform: uppercase;
+}
+
+.center-menu1,
+.center-menu2 {
+    font-size: 14px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.86;
+    letter-spacing: 0.7px;
+    text-align: left;
+    color: rgb(33, 33, 33);
+}
+
+.footermenu .center-menu1 {
+    display: inline-block;
+    margin-right: 17%;
+}
+
+.footermenu .center-menu2 {
+    display: inline-block;
+}
+
+.footermenu .center-menu1 ul {
+    list-style-type: none
+}
+
+.footermenu .center-menu2 ul {
+    list-style-type: none
+}
+
+.footermenu .right-col {
+    width: 35%;
+    float: right;
+    display: inline-block;
+
+}
+
+.footermenu .right-col p:first-child {
+    text-transform: uppercase;
+}
+
+.text-right-col {
+    font-size: 14px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.57;
+    letter-spacing: normal;
+    text-align: left;
+    color: rgb(33, 33, 33);
+}
+
+.suscribe input {
+    margin-top: 26px;
+    width: 370px;
+    height: 48px;
+    border: solid 1px rgb(217, 222, 225);
+    background-color: rgb(255, 255, 255);
+
+}
+
+form {
+  position: relative;
+  width: 300px;
+  margin: 0 auto;
+}
+input, button {
+  border: none;
+  outline: none;
+  border-radius: 3px;
+}
+input {
+  width: 100%;
+  height: 42px;
+  background: #F9F0DA;
+  padding-left: 15px;
+}
+button {
+  height: 26px;
+  width: 26px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: #F15B42;
+  cursor: pointer;
+}
+button:before {
+  content: url"../img/mail.png"
+  color: #F9F0DA;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.footer {
+    margin-top: 59px;
+    clear: both;
+}
+
+
+
+.footermenu .copyr {}
+
+.footermenu .socialimg {}
+
+.footermenu .soc {}
+
+.footermenu img {}
+
+.footermenu .terms {}
+
+.footermenu .link {}
