--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap&subset=cyrillic');
+
 * {
     margin: 0;
     padding: 0;
@@ -772,7 +773,8 @@ button:before {
 
 .clr {
     width: 100%;
-    height: 291px
+    height: 291px;
+    clear: both;
 }
 
 
@@ -796,5 +798,68 @@ button:before {
 }
 
 .contact-content {
-    min-height: 100%
+    min-height: 100%;
+    overflow: hidden;
 }
+
+.contacts {
+    margin-top: 71px;
+    overflow: hidden;
+}
+
+.cont1,
+.cont2,
+.cont3 {
+    width: 370px;
+    height: 370px;
+    opacity: 0.9;
+    border: solid 1px #9c9c9c;
+    background-color: #ffffff;
+    float: left;
+    margin-right: 15px;
+    padding-top: 7%;
+    box-sizing: border-box;
+}
+
+.contact-text-h2 {
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 30px;
+    text-align: center;
+    color: #212121;
+    text-transform: uppercase;
+}
+
+.contact-text {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    text-align: center;
+    color: #6c6c6c;
+}
+
+.contact-text-bold {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #212121;
+}
+
+.contact-address {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    text-align: center;
+    color: #6c6c6c;
+}
+
+.icon-location {
+    font-family: icomoon;
+    font-size: 48px;
+    line-height: 30px;
+    color: #212121;
+    text-align: center;
+}
+
